<resources>
    <string name="app_name">Gameme</string>
    <string name="Logintxt">Login</string>
    <string name="Passwordtxt">Your Password</string>
    <string name="Logmailtxt">Your Email</string>
    <string name="copyright"> © 2020 Gameme All Rights Reserved</string>
    <string name="passwordind">Password:</string>
    <string name="userind">User:</string>
    <string name="Loginbtn">Login</string>
    <string name="registerbtn">Register</string>

    <string name="registerheader">User Register</string>
    <string name="registerFirstname">First name</string>
    <string name="registerLastname">Last name</string>
    <string name="registerNick">Nickname</string>
    <string name="registerMail">Email</string>
    <string name="registerDateOB">Date of birth:</string>

    <string name="registerPass">Your Password</string>
    <string name="registerButton">Register</string>
    <string name="registerCountry">Your Country</string>


</resources>
